--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li></li>
+        </ul>
+      </nav>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
